jatektortenet kep kész

--- a/jatek_tortenet.html
+++ b/jatek_tortenet.html
@@ -19,24 +19,36 @@
         inspirálta, analóg eszközökkel épült fel. Maga a játék egy vektoros kijelzőn egy rakéta röptét szimulálta,
         amelyet a képernyőre rajzolt célokba kellett irányítani.</p>
     <p>Az ezután következő jelentősebb korai játékok:</p>
+    <img style="float: right;" src="images/tennis_for_two.jpg" alt="Tennis for two">
+    
     <ul>
         <li>
-            <p>Christopher Strachey brit számítástechnikus Nimrod számítógépen bemutatott játéka az 1951-es Britannia
-                Fesztiválon,</p>
+            <p>
+               
+                Christopher Strachey brit számítástechnikus Nimrod számítógépen bemutatott játéka az 1951-es Britannia
+                Fesztiválon,
+            </p>
         </li>
         <li>
-            <p>OXO – egy számítógépes tic-tac-toe játék, amely az EDSAC számítógépre készült 1952-ben, szerzője
-                Alexander S. Douglas,</p>
+            <p>
+                OXO – egy számítógépes tic-tac-toe játék, amely az EDSAC számítógépre készült 1952-ben, szerzője
+                Alexander S. Douglas,
+            </p>
         </li>
         <li>
-            <p>Tennis for Two – interaktív elektronikus játék 1958-ból, szerzője William Higinbotham,</p>
+            <p>
+                Tennis for Two – interaktív elektronikus játék 1958-ból, szerzője William Higinbotham,
+            </p>
         </li>
         <li>
-            <p>Spacewar! – 1961-ben megjelent játék a DEC PDP-1 számítógépre, az MIT diákjainak fejlesztésében.</p>
+            <p>
+                Spacewar! – 1961-ben megjelent játék a DEC PDP-1 számítógépre, az MIT diákjainak fejlesztésében.
+            </p>
         </li>
     </ul>
     <p>
         1951-ben a Britannia Fesztiválon bemutatott Nimrod számítógép kifejezetten a nim játék megvalósítását
+        <img style="float: right;" src="images/Spacewar.jpg" alt="Spacewar">    
         demonstrálta. A számítógép több panellen felvillanó fényforrásokkal jelenítette meg a játék folyamatát, a
         kezelésre pedig egy pulton található kapcsolókkal és nyomógombokkal volt lehetőség.
     </p>
@@ -55,6 +67,7 @@
         fennállásának 50 éves évfordulója alkalmából újraalkották a gépet valamint a játékot, amelyet a 2008-ban
         mutattak be a játék első megjelenésének 50 éves évfordulóján.
     </p>
+    <img style="float: right;" src="images/Joystick.png" alt="">
     <p>
         A Spacewar! játékprogramot 1961-ben írták Martin Graetz, Alan Kotok és Steve Russell, az MIT hallgatói és
         kutatói. A kétajtós szekrény méretű PDP-1 típusú számítógépen két űrhajó egymás elleni harcát szimulálták. A
@@ -67,6 +80,7 @@
         Majd 1972-ben, miután a cégük már Atari néven működött, kiadták Pong nevű játékukat, amelyet munkatársuk, Allan
         Alcorn fejlesztett.
     </p>
+    <img style="float: right;" src="images/Pong_Game.gif" alt="">
     <p>
         A legtöbb klasszikus társasjátéknak (sakk, dámajáték, gomoku stb.) készült számítógépes változata, de a
         számítógéppel történő interakció fizikai korlátozottsága miatt az ügyességi játékok újfajta játékélmény
