--- a/jatek_tortenet.html
+++ b/jatek_tortenet.html
@@ -19,7 +19,7 @@
         inspirálta, analóg eszközökkel épült fel. Maga a játék egy vektoros kijelzőn egy rakéta röptét szimulálta,
         amelyet a képernyőre rajzolt célokba kellett irányítani.</p>
     <p>Az ezután következő jelentősebb korai játékok:</p>
-    <img style="float: right;" src="images/tennis_for_two.jpg" alt="Tennis for two">
+    <img style="float: right; padding: 10px" src="images/tennis_for_two.jpg" alt="Tennis for two">
     
     <ul>
         <li>
@@ -46,12 +46,12 @@
             </p>
         </li>
     </ul>
-    <p>
+    <p> 
         1951-ben a Britannia Fesztiválon bemutatott Nimrod számítógép kifejezetten a nim játék megvalósítását
-        <img style="float: right;" src="images/Spacewar.jpg" alt="Spacewar">    
         demonstrálta. A számítógép több panellen felvillanó fényforrásokkal jelenítette meg a játék folyamatát, a
         kezelésre pedig egy pulton található kapcsolókkal és nyomógombokkal volt lehetőség.
     </p>
+    <img style="float: right; padding: 10px;" src="images/Spacewar.jpg" alt="Spacewar">    
     <p>
         1952-ben a Cambridge-i Egyetemen doktorált Alexander S. Douglas az egyetem EDSAC (angolul: Electronic Delay
         Storage Automatic Calculator), elektroncsöves számítógépén valósította meg a tic-tac-toe játékot OXO névvel,
@@ -67,7 +67,7 @@
         fennállásának 50 éves évfordulója alkalmából újraalkották a gépet valamint a játékot, amelyet a 2008-ban
         mutattak be a játék első megjelenésének 50 éves évfordulóján.
     </p>
-    <img style="float: right;" src="images/Joystick.png" alt="">
+    <img style="float: right; padding: 10px" src="images/Joystick.png" alt="">
     <p>
         A Spacewar! játékprogramot 1961-ben írták Martin Graetz, Alan Kotok és Steve Russell, az MIT hallgatói és
         kutatói. A kétajtós szekrény méretű PDP-1 típusú számítógépen két űrhajó egymás elleni harcát szimulálták. A
@@ -80,7 +80,7 @@
         Majd 1972-ben, miután a cégük már Atari néven működött, kiadták Pong nevű játékukat, amelyet munkatársuk, Allan
         Alcorn fejlesztett.
     </p>
-    <img style="float: right;" src="images/Pong_Game.gif" alt="">
+    <img style="float: right; padding: 10px" src="images/Pong_Game.gif" alt="">
     <p>
         A legtöbb klasszikus társasjátéknak (sakk, dámajáték, gomoku stb.) készült számítógépes változata, de a
         számítógéppel történő interakció fizikai korlátozottsága miatt az ügyességi játékok újfajta játékélmény
