főoldali változtatások/ header majdnem kész

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="header">
-        <h1 class="focim"><span>J</span>átékok</h1>
+        <h1 class="focim"><a href="index.html"><span>J</span></a>átékok</h1>
         <div id="topnav">
             <a href="jatek_tortenet.html">Játék történet</a>
             <a href="mufajok.html">Műfajok</a>
