--- a/jatek_tortenet.html
+++ b/jatek_tortenet.html
@@ -11,6 +11,8 @@
 
 <body>
     <h1>A Videójátékok Története</h1>
+    <img src="images/tennis_for_two.jpg" alt="Tennis for two">
+
     <p>Az elektronikus videójátékok története a 20. század közepére nyúlik vissza. A korai videójátékok különféle
         elektronikus eszközökön jelentek meg és változatos megjelenítő eszközöket használtak. Az elektronikus
         videójátékok legkorábbi példája egy 1947-ből származó szabadalom, amelyet „Katódsugárcsöves szórakoztató eszköz”
@@ -19,12 +21,11 @@
         inspirálta, analóg eszközökkel épült fel. Maga a játék egy vektoros kijelzőn egy rakéta röptét szimulálta,
         amelyet a képernyőre rajzolt célokba kellett irányítani.</p>
     <p>Az ezután következő jelentősebb korai játékok:</p>
-    <img style="float: right; padding: 10px" src="images/tennis_for_two.jpg" alt="Tennis for two">
-    
+
     <ul>
         <li>
             <p>
-               
+
                 Christopher Strachey brit számítástechnikus Nimrod számítógépen bemutatott játéka az 1951-es Britannia
                 Fesztiválon,
             </p>
@@ -46,12 +47,17 @@
             </p>
         </li>
     </ul>
-    <p> 
+    <div>
+        <img src="images/Spacewar.jpg" alt="Spacewar"> <br>
+        <div >
+            dfisdvfishi h ahfius iuhciu ois ui h
+        </div>
+    </div>
+    <p>
         1951-ben a Britannia Fesztiválon bemutatott Nimrod számítógép kifejezetten a nim játék megvalósítását
         demonstrálta. A számítógép több panellen felvillanó fényforrásokkal jelenítette meg a játék folyamatát, a
         kezelésre pedig egy pulton található kapcsolókkal és nyomógombokkal volt lehetőség.
     </p>
-    <img style="float: right; padding: 10px;" src="images/Spacewar.jpg" alt="Spacewar">    
     <p>
         1952-ben a Cambridge-i Egyetemen doktorált Alexander S. Douglas az egyetem EDSAC (angolul: Electronic Delay
         Storage Automatic Calculator), elektroncsöves számítógépén valósította meg a tic-tac-toe játékot OXO névvel,
@@ -67,7 +73,7 @@
         fennállásának 50 éves évfordulója alkalmából újraalkották a gépet valamint a játékot, amelyet a 2008-ban
         mutattak be a játék első megjelenésének 50 éves évfordulóján.
     </p>
-    <img style="float: right; padding: 10px" src="images/Joystick.png" alt="">
+    <img src="images/Joystick.png" alt="">
     <p>
         A Spacewar! játékprogramot 1961-ben írták Martin Graetz, Alan Kotok és Steve Russell, az MIT hallgatói és
         kutatói. A kétajtós szekrény méretű PDP-1 típusú számítógépen két űrhajó egymás elleni harcát szimulálták. A
@@ -80,7 +86,7 @@
         Majd 1972-ben, miután a cégük már Atari néven működött, kiadták Pong nevű játékukat, amelyet munkatársuk, Allan
         Alcorn fejlesztett.
     </p>
-    <img style="float: right; padding: 10px" src="images/Pong_Game.gif" alt="">
+    <img src="images/Pong_Game.gif" alt="">
     <p>
         A legtöbb klasszikus társasjátéknak (sakk, dámajáték, gomoku stb.) készült számítógépes változata, de a
         számítógéppel történő interakció fizikai korlátozottsága miatt az ügyességi játékok újfajta játékélmény
