a sikeres játékok oldalon az aláírásban lévő táblázatok fejlesztése

--- a/speedrunok.html
+++ b/speedrunok.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <p>Speedrunok</p>
+    <h1>A Speedrunning egy videojáték vagy egy videojáték egy szakaszának a játéka azzal a céllal, hogy azt a lehető leggyorsabban befejezze.</h1>
 </body>
 </html>
