--- a/mufajok.html
+++ b/mufajok.html
@@ -1,156 +1,189 @@
 <!DOCTYPE html>
 <html lang="hu">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Műfajok</title>
-        <link rel="stylesheet" href="index.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Műfajok</title>
+    <link rel="stylesheet" href="index.css">
+</head>
 
-    <body>
-        <h1>Műfajok</h1>
-        <p>Mint a média legtöbb formája. A videójátékok is különböző műfajokba sorolhatóak számos különböző jellemvonás alapján, mint a játékmenet, a célok fajtái stb. A játékok fejlődésével a műfajok is változtak az idők folyamán, ahogy új játékstílusok jöttek létre különböző tartalmakkal. A technikai lehetőségek bővülésével az évek során a videójátékok készítésének költségei is egyre emelkedtek, egyre életszerűbb grafikus látvánnyal, a történetmesélés és a játékmenet komplexitásával egyre kitolva az addig hagyományossá vált műfajok határait.</p>
-        <p>Előfordul hogy eddigiektől eltérő játékok különböző műfajokat kombinálnak, mint a TPS lövöldözést autóvezetéssel, az akciót és a szerepjátékot, egy stratégiai játékban a valós idejű stratégiát csatákban és körökre osztott stratégiát egy világtérképen.</p>
-        <p>A műfaj megnevezésénél általában az angol rövidítését használják.</p>
-        <p>
-        <h2>Akció</h2>
-        </p>
-        <ul>
-            <li>
-                <p>
-                <h2>FPS</h2>: 
-                (First Person Shooter) vagy belső nézetű lövöldözős játék olyan lövöldözős videójáték, ahol a játékos az általa irányított figura szemszögéből látja a játékban történteket.
-                </p>
-            </li>
-            <li>
-                <p>
-                <h2>TPS</h2> 
-                (Third-person shooter) külső nézetű lövöldözős játék, melyben az irányított karakternek általában fedezékről-fedezékre haladva kell leszámolnia ellenfeleivel.
-                </p>
-            </li>
-            <li>
-                <p>
-                <h2>Oldalnézetes akciójáték:</h2>
-                Klasszikus, 2D-s megjelenítési módot használó játék.
-                </p>
-            </li>
-        </ul>
-        <p>
-        <h2>Ügyességi</h2>
-        </p>
-        <ul>
-            <li>
-                <p>
-                <h2>Platformer:</h2> az irányított hősnek különböző akadályok (gyakran ellenfelek) legyőzésével és platformok közti ugrálással / haladással kell eljutnia a pálya végéig. Az egyes pályák során különböző érméket, kincseket és egyéb gyűjtögetni valókat szedhetünk össze a magasabb pontszám érdekében.</p>
-                <p>
-            </li>
-        </ul>
-        <h2>Kaland</h2>
-        </p>
-        <p>
-        <h2>Szerepjátékok</h2>
-        </p>
-        <ul>
-            <li>
-                <p>
-                <h2>MMORPG:</h2> 
-                (Massively Multiplayer Online Role-Playing Game – nagyon sok szereplős online szerepjáték) interneten, online játszható szerepjáték. Sok ezer ember játszik egyszerre egy 2D vagy 3D világban, képességeket fejlesztenek, szörnyek ellen harcolnak egyedül vagy többen, közben kereskednek. A lehetőségek tárháza végtelen, de játékonként eltérő lehet. Legismertebbek a World of Warcraft, Lineage I/II, Guild Wars, Roblox.
-                </p>
-            </li>
-            <li>
-                <p>
-                <h2>RPG:</h2> 
-                (Role-Playing Game) Az MMORPG-hez hasonló játékelemekkel és játékmenettel rendelkezik, ám ezt legtöbbször egyedül játszhatjuk offline módban (Pl. The Witcher sorozat), de akad néhány olyan is, ahol pár barátunkkal vagy random emberrel együtt online vagy akár offline co-op módban (Pl. Diablo 3)
-                </p>
-            </li>
-        </ul>
-        <h2>Stratégiai játékok</h2>
-        </p>
-        <ul>
-            <li>
-                <p>
-                <h2>Valós idejű stratégia:</h2> 
-                (real time strategy, rövidítve RTS) valós időben zajlanak, a játékmenet folyamatos, az összes játékos bármikor adhat ki parancsokat, amelyek végrehajtása azonnal el is kezdődik. Az átlagos RTS-ekben a fő feladatok az erőforrások összegyűjtése, bázisok építése, technológia fejlesztése és az egységek irányítása.
-                </p>
-            </li>
-            <li>
-                <p>
-                <h2>Valós idejű taktika</h2>
-                </p>
-            </li>
-            <li>
-                <p>
-                <h2>Körökre osztott stratégia:</h2> Például: Civilization IV
-                </p>
-            </li>
-        </ul>
-        <p>
-        <h2>Menedzselős és szimulátor,</h2> „Istenszimulátor”, városszimulátor: A valós idejű stratégiai játékokhoz hasonlító játéktípus. A játékosnak egy igen részletesen kidolgozott világot (emberekkel vagy kitalált lényekkel teli konyhát, várost, bolygót, galaxist, kereskedelmi vállalatot stb.) kell irányítania. A fő cél nem a harc (sokszor ellenfelek sincsenek), hanem hogy megfelelően irányítsa az alá rendelt, általában (a stratégiai játékoktól eltérően) sok-sok, komplex módon összefüggő játékparaméterrel rendelkező világot, általában bizonyos, a készítők által meghatározott célt elérve. Korai istenszimulátornak tekinthető a Civilization, valamint a Sierra tipikus városszimulátor sorozata (Caesar sorozat, Pharaoh), illetve a Sim City sorozat.
-        </p>
+<body>
+    <h1>Műfajok</h1>
+    <p>Mint a média legtöbb formája. A videójátékok is különböző műfajokba sorolhatóak számos különböző jellemvonás
+        alapján, mint a játékmenet, a célok fajtái stb. A játékok fejlődésével a műfajok is változtak az idők folyamán,
+        ahogy új játékstílusok jöttek létre különböző tartalmakkal. A technikai lehetőségek bővülésével az évek során a
+        videójátékok készítésének költségei is egyre emelkedtek, egyre életszerűbb grafikus látvánnyal, a
+        történetmesélés és a játékmenet komplexitásával egyre kitolva az addig hagyományossá vált műfajok határait.</p>
+    <p>Előfordul hogy eddigiektől eltérő játékok különböző műfajokat kombinálnak, mint a TPS lövöldözést autóvezetéssel,
+        az akciót és a szerepjátékot, egy stratégiai játékban a valós idejű stratégiát csatákban és körökre osztott
+        stratégiát egy világtérképen.</p>
+    <p>A műfaj megnevezésénél általában az angol rövidítését használják.</p>
+    <p>
+    <h2>Akció</h2>
+    </p>
+    <ul>
+        <li>
+            <p>
+            <h2>FPS</h2>:
+            (First Person Shooter) vagy belső nézetű lövöldözős játék olyan lövöldözős videójáték, ahol a játékos az
+            általa irányított figura szemszögéből látja a játékban történteket.
+            </p>
+        </li>
+        <li>
+            <p>
+            <h2>TPS</h2>
+            (Third-person shooter) külső nézetű lövöldözős játék, melyben az irányított karakternek általában
+            fedezékről-fedezékre haladva kell leszámolnia ellenfeleivel.
+            </p>
+        </li>
+        <li>
+            <p>
+            <h2>Oldalnézetes akciójáték:</h2>
+            Klasszikus, 2D-s megjelenítési módot használó játék.
+            </p>
+        </li>
+    </ul>
+    <p>
+    <h2>Ügyességi</h2>
+    </p>
+    <ul>
+        <li>
+            <p>
+            <h2>Platformer:</h2> az irányított hősnek különböző akadályok (gyakran ellenfelek) legyőzésével és
+            platformok közti ugrálással / haladással kell eljutnia a pálya végéig. Az egyes pályák során különböző
+            érméket, kincseket és egyéb gyűjtögetni valókat szedhetünk össze a magasabb pontszám érdekében.</p>
+            <p>
+        </li>
+    </ul>
+    <h2>Kaland</h2>
+    </p>
+    <p>
+    <h2>Szerepjátékok</h2>
+    </p>
+    <ul>
+        <li>
+            <p>
+            <h2>MMORPG:</h2>
+            (Massively Multiplayer Online Role-Playing Game – nagyon sok szereplős online szerepjáték) interneten,
+            online játszható szerepjáték. Sok ezer ember játszik egyszerre egy 2D vagy 3D világban, képességeket
+            fejlesztenek, szörnyek ellen harcolnak egyedül vagy többen, közben kereskednek. A lehetőségek tárháza
+            végtelen, de játékonként eltérő lehet. Legismertebbek a World of Warcraft, Lineage I/II, Guild Wars, Roblox.
+            </p>
+        </li>
+        <li>
+            <p>
+            <h2>RPG:</h2>
+            (Role-Playing Game) Az MMORPG-hez hasonló játékelemekkel és játékmenettel rendelkezik, ám ezt legtöbbször
+            egyedül játszhatjuk offline módban (Pl. The Witcher sorozat), de akad néhány olyan is, ahol pár barátunkkal
+            vagy random emberrel együtt online vagy akár offline co-op módban (Pl. Diablo 3)
+            </p>
+        </li>
+    </ul>
+    <h2>Stratégiai játékok</h2>
+    </p>
+    <ul>
+        <li>
+            <p>
+            <h2>Valós idejű stratégia:</h2>
+            (real time strategy, rövidítve RTS) valós időben zajlanak, a játékmenet folyamatos, az összes játékos
+            bármikor adhat ki parancsokat, amelyek végrehajtása azonnal el is kezdődik. Az átlagos RTS-ekben a fő
+            feladatok az erőforrások összegyűjtése, bázisok építése, technológia fejlesztése és az egységek irányítása.
+            </p>
+        </li>
+        <li>
+            <p>
+            <h2>Valós idejű taktika</h2>
+            </p>
+        </li>
+        <li>
+            <p>
+            <h2>Körökre osztott stratégia:</h2> Például: Civilization IV
+            </p>
+        </li>
+    </ul>
+    <p>
+    <h2>Menedzselős és szimulátor,</h2> „Istenszimulátor”, városszimulátor: A valós idejű stratégiai játékokhoz
+    hasonlító játéktípus. A játékosnak egy igen részletesen kidolgozott világot (emberekkel vagy kitalált lényekkel teli
+    konyhát, várost, bolygót, galaxist, kereskedelmi vállalatot stb.) kell irányítania. A fő cél nem a harc (sokszor
+    ellenfelek sincsenek), hanem hogy megfelelően irányítsa az alá rendelt, általában (a stratégiai játékoktól eltérően)
+    sok-sok, komplex módon összefüggő játékparaméterrel rendelkező világot, általában bizonyos, a készítők által
+    meghatározott célt elérve. Korai istenszimulátornak tekinthető a Civilization, valamint a Sierra tipikus
+    városszimulátor sorozata (Caesar sorozat, Pharaoh), illetve a Sim City sorozat.
+    </p>
 
-        <p>
-            A hardvertechnológia csak az 1990-es évek közepére kezdte megközelíteni azt a számítási teljesítményt, hogy egy városnál bonyolultabb struktúrát (pl. részletesen kidolgozott fajok fejlődését egy galaxisban) is szimulálni lehessen PC-n. Így a 2000-es években megjelent a műfaj újabb nemzedéke vagy altípusa, amelyekben fajok fejlődését és terjeszkedését kell irányítani (Spore). A mesterséges életszimulációs játékoknak komoly szerepe van az evolúcióbiológiai, matematikai és kognitív tudomány jellegű kutatásokban, bár az ott alkalmazott szimulátorprogramok lényege nem a grafikus kidolgozottság, így nem feltétlenül tekinthetők „videójátékoknak”. A leghíresebb példa John Conway rendkívül egyszerű megjelenésű (sejtautomata szimuláció) és szabályokra épülő Életjátéka.
-        </p>
+    <p>
+        A hardvertechnológia csak az 1990-es évek közepére kezdte megközelíteni azt a számítási teljesítményt, hogy egy
+        városnál bonyolultabb struktúrát (pl. részletesen kidolgozott fajok fejlődését egy galaxisban) is szimulálni
+        lehessen PC-n. Így a 2000-es években megjelent a műfaj újabb nemzedéke vagy altípusa, amelyekben fajok
+        fejlődését és terjeszkedését kell irányítani (Spore). A mesterséges életszimulációs játékoknak komoly szerepe
+        van az evolúcióbiológiai, matematikai és kognitív tudomány jellegű kutatásokban, bár az ott alkalmazott
+        szimulátorprogramok lényege nem a grafikus kidolgozottság, így nem feltétlenül tekinthetők „videójátékoknak”. A
+        leghíresebb példa John Conway rendkívül egyszerű megjelenésű (sejtautomata szimuláció) és szabályokra épülő
+        Életjátéka.
+    </p>
 
-        <p>
-            <h2>Logikai</h2>
-            („Puzzle”)
-        </p>
+    <p>
+    <h2>Logikai</h2>
+    („Puzzle”)
+    </p>
 
-        <p>
-            <h2>Szimulátor:</h2>
-            A játékosnak virtuális eszközöket, esetleg álltatokat (kecske) vagy dolgokat (kő) kell irányítania, amelynek azonban létezik megfelelője a valóságban is. A hangsúly az adott dolog valós tulajdonságain, a minél hűbb modellezésen van.
-        </p>
-        
-        <ul>
-            <li>
-                <p>
-                    <h2>Autószimulátorok</h2>
-                </p>
-            </li>
-            <li>
-                <p>
-                    <h2>Vasútszimulátorok</h2>
-                </p>
-            </li>
-            <li>
-                <p>
-                <h2>Repülőgép-szimulátorok</h2>
-                </p>
-            </li>
-            <li>
-                <p>
-                    <h2>Tengeralattjáró-szimulátorok</h2>
-                </p>
-            </li>
-        </ul>
+    <p>
+    <h2>Szimulátor:</h2>
+    A játékosnak virtuális eszközöket, esetleg álltatokat (kecske) vagy dolgokat (kő) kell irányítania, amelynek azonban
+    létezik megfelelője a valóságban is. A hangsúly az adott dolog valós tulajdonságain, a minél hűbb modellezésen van.
+    </p>
 
-        <p>
-            <h2>Menedzselős</h2>
-        </p>
+    <ul>
+        <li>
+            <p>
+            <h2>Autószimulátorok</h2>
+            </p>
+        </li>
+        <li>
+            <p>
+            <h2>Vasútszimulátorok</h2>
+            </p>
+        </li>
+        <li>
+            <p>
+            <h2>Repülőgép-szimulátorok</h2>
+            </p>
+        </li>
+        <li>
+            <p>
+            <h2>Tengeralattjáró-szimulátorok</h2>
+            </p>
+        </li>
+    </ul>
 
-        <p>
-            <h2>Sport</h2>
-        </p>
+    <p>
+    <h2>Menedzselős</h2>
+    </p>
 
-        <p>
-            <h2>Lexikális tudás alapú</h2>
-        </p>
+    <p>
+    <h2>Sport</h2>
+    </p>
 
-        <p>
-            <h2>Szerencsejáték</h2>
-        </p>
+    <p>
+    <h2>Lexikális tudás alapú</h2>
+    </p>
 
-        <p>
-            <h2> Brawl </h2>
-            (verekedős játékok pl.: Mortal Kombat)
-        </p>
+    <p>
+    <h2>Szerencsejáték</h2>
+    </p>
 
-        <p>
-            <h2>Táblajátékok:</h2> a valóságban is játszható játékok, mint a sakk, dáma elektronikus változatai. Lehetnek közelvalóságszerűek, vagy speciális effektekkel attól elrugaszkodottak (pl. animált, szétmálló bábuk).
-        </p>
+    <p>
+    <h2> Brawl </h2>
+    (verekedős játékok pl.: Mortal Kombat)
+    </p>
 
-    </body>
+    <p>
+    <h2>Táblajátékok:</h2> a valóságban is játszható játékok, mint a sakk, dáma elektronikus változatai. Lehetnek
+    közelvalóságszerűek, vagy speciális effektekkel attól elrugaszkodottak (pl. animált, szétmálló bábuk).
+    </p>
+
+</body>
+
 </html>
