--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
             <a href="speedrunok.html">Speedrunok</a>
             <a href="videojatekok.html">Videójátékok</a>
         </div>
-           <hr>
+        
+        <img class="felsoszegely" src="images/layere.png" alt="">
+        <hr>
     </div>
-    <img src="" alt="">
-    <div>
-        <h2>Az oldalról </h2>
-        <p>Az oldal a játékokról, mint egy nagy terjedelmű alaptéma, magába
-            foglalja főként a videójátékokat, és az olvasókat megismerteti annak mindenféle ágaival.
-        </p>
+    <div id="azoldalrolfooldal" >
+        <h2 class="h2fooldal">Az oldalról </h2>
+        <p class="azoldalrolfooldal">Az oldal a játékokról, mint egy nagy terjedelmű alaptéma, <br> magába
+            foglalja főként a videójátékokat, és az olvasókat <br> megismerteti annak mindenféle ágaival. </p>
     </div>
 
 
