A speedrunos oldal elkezdése, első mondatok beírása

--- a/speedrunok.html
+++ b/speedrunok.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <p>Speedrunok</p>
-    <h1>A Speedrunning egy videojáték vagy egy videojáték egy szakaszának a játéka azzal a céllal, hogy azt a lehető leggyorsabban befejezze.</h1>
+    <h1>A speedrunolás teknikája már az első híresebb videójátékok megjelenése óta jelen van,célja hogy a játékos különféle exploitok és taktikák,illetve glitchek segítségével gyorsabban kijátssza az adott játékot vagy játékszakaszt. Ez időre megy, és gyakran versenyeket is rendeznek belőle.</h1>
+
 </body>
 </html>
