--- a/mufajok.html
+++ b/mufajok.html
@@ -9,14 +9,20 @@
     <link rel="stylesheet" href="index.css">
 
     <style>
-        img{
+        img {
             width: 400px;
         }
+
         .kep {
-            margin-left: 90rem;
+            display: flex;
+            justify-content: flex-end;
+            flex-direction: column;
+            text-align: center;
         }
-        .li_elem{
-            margin-right: 400px;
+
+        .li-elem {
+            max-width: 100rem;
+            text-align: justify;
         }
     </style>
 
@@ -31,8 +37,8 @@
         <a href="sikeres.html">Sikeres játékok</a>
         <a href="speedrunok.html">Speedrunok</a>
         <a href="videojatekok.html">Videójátékok</a>
-        <hr>
     </div>
+    <hr>
 
 
     <h1>Műfajok</h1>
@@ -52,32 +58,36 @@
             </p>
             <ul>
                 <li>
-                    <div class="li_elem">
+                    <div class="li-elem">
                         <h2>FPS</h2>
-                        (First Person Shooter) vagy belső nézetű lövöldözős játék olyan lövöldözős videójáték, ahol a
-                        játékos az
-                        általa irányított figura szemszögéből látja a játékban történteket.
+                        <p>
+                            (First Person Shooter) vagy belső nézetű lövöldözős játék olyan lövöldözős videójáték, ahol
+                            a
+                            játékos az
+                            általa irányított figura szemszögéből látja a játékban történteket.
+                        </p>
                         <div class="kep">
                             <img src="images/fps.gif" alt="">
                         </div>
                     </div>
                 </li>
                 <li>
-                    <div class="li_elem">
-                        <p>
+                    <div class="li-elem">
                         <h2>TPS</h2>
-                        (Third-person shooter) külső nézetű lövöldözős játék, melyben az irányított karakternek általában
-                        fedezékről-fedezékre haladva kell leszámolnia ellenfeleivel.
-                    </p>
-                    <div class="kep">
-                        <img src="images/tps.jpg" alt="">
-                    </div>
+                        <p>
+                            (Third-person shooter) külső nézetű lövöldözős játék, melyben az irányított karakternek
+                            általában
+                            fedezékről-fedezékre haladva kell leszámolnia ellenfeleivel.
+                        </p>
+                        <div class="kep">
+                            <img src="images/tps.jpg" alt="">
+                        </div>
                     </div>
                 </li>
                 <li>
-                    <p>
                     <h2>Oldalnézetes akciójáték:</h2>
-                    Klasszikus, 2D-s megjelenítési módot használó játék.
+                    <p>
+                        Klasszikus, 2D-s megjelenítési módot használó játék.
                     </p>
                 </li>
             </ul>
