--- a/jatek_tortenet.html
+++ b/jatek_tortenet.html
@@ -69,7 +69,6 @@
                     Spacewar
                 </div>
             </div>
-            </p>
         </li>
         <li>
             <p>
@@ -109,7 +108,7 @@
         programot a készítői ingyenesen terjesztették lyukszalagon (a korai számítógépek szabványos adathordozóján), s
         hamar elterjedt az akkori tudományos kutatói szférában.
     </p>
-    <div style="border: 0px solid rgb(44, 49, 38);"></div>
+    <div style="border: 0 solid rgb(44, 49, 38);"></div>
     <div class="tortenetkep">
         <img src="images/Joystick.png" alt="">
         <div class="tortenetkepszoveg">
