--- a/speedrunok.html
+++ b/speedrunok.html
@@ -10,6 +10,15 @@
 <body>
     <p>Speedrunok</p>
     <h1>A speedrunolás teknikája már az első híresebb videójátékok megjelenése óta jelen van,célja hogy a játékos különféle exploitok és taktikák,illetve glitchek segítségével gyorsabban kijátssza az adott játékot vagy játékszakaszt. Ez időre megy, és gyakran versenyeket is rendeznek belőle.</h1>
-
+<ul>A leghíresebb speedrunoló játékok
+    <li>Portal</li>
+    <li>Super Mario Széria</li>
+    <li>Dark Souls III</li>
+    <li>The Legend of Zelda</li>
+    <li>Minecraft</li>
+    <li>Cuphead</li>
+    <li>Quake</li>
+    <li>Resident Evil Széria</li>
+</ul>
 </body>
 </html>
