legsikeresebbjátékok + css -képek

--- a/sikeres.html
+++ b/sikeres.html
@@ -38,7 +38,7 @@
                 </div>
                 
             </div>
-            <div>
+            <div class="legsikeresebbkep">
                 <img src="images/terraria.jpg" alt="Terraria" title="Terraria">
                 <div class="legsikeresebbalairas">Terraria <br>
                 <table>
