--- a/mufajok.html
+++ b/mufajok.html
@@ -246,6 +246,7 @@
                 </li>
                 <li>
                     <h2>Tengeralattjáró-szimulátorok</h2>
+                    <img src="images/tengeralattjarao.jpg" alt="">
                 </li>
             </ul>
         </li>
@@ -254,9 +255,11 @@
     <ul>
         <li>
             <h2>Sport</h2>
+            <img src="images/sportjatek.jpg" alt="">
         </li>
         <li>
             <h2>Lexikális tudás alapú</h2>
+            <img src="images/honfoglalo.jpg" alt="">
         </li>
         <li>
             <h2>Szerencsejáték</h2>
