--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div id="header">
-        <h1 class="focim"><a href="index.html"><span>J</span></a>átékok</h1>
-        <div id="topnav">
-            <a href="jatek_tortenet.html">Játék történet</a>
-            <a href="mufajok.html">Műfajok</a>
-            <a href="onlinejatekok.html">Online játékok</a>
-            <a href="sikeres.html">Sikeres játékok</a>
-            <a href="speedrunok.html">Speedrunok</a>
-            <a href="videojatekok.html">Videójátékok</a>
-        </div>
-        
+    <header>
+        <img class="hatterkep1" src="images/hatterkep1.png" alt="">
+        <div id="header">
+            <h1 class="focim"><a href="index.html"><span>J</span></a>átékok</h1>
+            <div id="topnav">
+                <a href="jatek_tortenet.html">Játék történet</a>
+                <a href="mufajok.html">Műfajok</a>
+                <a href="onlinejatekok.html">Online játékok</a>
+                <a href="sikeres.html">Sikeres játékok</a>
+                <a href="speedrunok.html">Speedrunok</a>
+                <a href="videojatekok.html">Videójátékok</a>
+            </div>
+            
+        </header>
         <img class="felsoszegely" src="images/layere.png" alt="">
         <hr>
     </div>
