--- a/onlinejatekok.html
+++ b/onlinejatekok.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <div id="topnav">
+        <a href="index.html">Kezdőlap</a>
+        <a href="mufajok.html">Műfajok</a>
+        <a href="onlinejatekok.html">Online játékok</a>
+        <a href="sikeres.html">Sikeres játékok</a>
+        <a href="speedrunok.html">Speedrunok</a>
+        <a href="videojatekok.html">Videójátékok</a>
+    </div>
 </body>
 </html>
